# arecv

./: CMakeLists.txt
dsrest/: CMakeLists.txt
dsrest/include/: client.hpp  error.hpp
dsrest/src/: client.cpp  ds.cpp
include/data/: api.hpp
src/: main.cpp
src/data/: api.cpp
